[gd_scene load_steps=2 format=3 uid="uid://ct572mbvpopab"]

[ext_resource type="Script" uid="uid://c8y2f8yyydwdy" path="res://scripts/weapon_panel.gd" id="1_kky2p"]

[node name="Panel" type="PanelContainer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 156.0
offset_top = -154.0
offset_right = 293.0
offset_bottom = -18.0
grow_vertical = 0
script = ExtResource("1_kky2p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "sword"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "whip"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "bible"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "garlic"

[connection signal="toggled" from="VBoxContainer/Button3" to="." method="_on_button_3_toggled"]
[connection signal="toggled" from="VBoxContainer/Button4" to="." method="_on_button_4_toggled"]
[connection signal="toggled" from="VBoxContainer/Button" to="." method="_on_button_toggled"]
[connection signal="toggled" from="VBoxContainer/Button2" to="." method="_on_button_2_toggled"]
